@@ -1,23 +1,24 @@
 package cn.kankancloud.jbp.mbp.query;
 
-import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
-import com.baomidou.mybatisplus.core.mapper.BaseMapper;
-import com.baomidou.mybatisplus.core.metadata.IPage;
 import cn.kankancloud.jbp.core.PagedData;
 import cn.kankancloud.jbp.core.exception.BizException;
 import cn.kankancloud.jbp.core.query.PageQuery;
+import com.baomidou.mybatisplus.core.conditions.Wrapper;
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.baomidou.mybatisplus.core.mapper.BaseMapper;
+import com.baomidou.mybatisplus.core.metadata.IPage;
 import lombok.NonNull;
 
 import java.util.List;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 public class PageQueryBuilder<E, R> {
 
     private PageQuery pageQuery;
-    private final Class<E> clazz;
-    private final Class<R> selectClass;
+    private final Class<E> entityClass;
+    private final Class<R> resultClass;
 
     private BaseMapper<E> mapper;
 
@@ -26,16 +27,16 @@ public class PageQueryBuilder<E, R> {
     private Consumer<QueryWrapper<E>> queryCustomizer;
 
     private PageQueryBuilder(Class<E> eClass, Class<R> rClass) {
-        this.clazz = eClass;
-        this.selectClass = rClass;
+        this.entityClass = eClass;
+        this.resultClass = rClass;
     }
 
-    public static <E> PageQueryBuilder<E, E> builder(@NonNull Class<E> eClass) {
-        return new PageQueryBuilder<>(eClass, eClass);
+    public static <E> PageQueryBuilder<E, E> builder(@NonNull Class<E> entityClass) {
+        return new PageQueryBuilder<>(entityClass, entityClass);
     }
 
-    public static <E, R> PageQueryBuilder<E, R> builder(@NonNull Class<E> eClass, @NonNull Class<R> rClass) {
-        return new PageQueryBuilder<>(eClass, rClass);
+    public static <E, R> PageQueryBuilder<E, R> builder(@NonNull Class<E> entityClass, @NonNull Class<R> resultClass) {
+        return new PageQueryBuilder<>(entityClass, resultClass);
     }
 
     public PageQueryBuilder<E, R> pageQuery(PageQuery pageQuery) {
@@ -58,17 +59,25 @@ public class PageQueryBuilder<E, R> {
         return this;
     }
 
+    public PagedData<R> selectPage(BiFunction<IPage<E>, QueryWrapper<E>, IPage<R>> pager) {
+        IPage<E> pageCondition = QueryUtil.buildPage(pageQuery);
+        QueryWrapper<E> query = QueryUtil.createQuery(entityClass, pageQuery);
+        IPage<R> apply = pager.apply(pageCondition, query);
+
+        return new PagedData<>(apply.getRecords(), apply.getTotal(), apply.getCurrent());
+    }
+
     public PagedData<R> selectPage() {
-        IPage<E> pageCondition = QueryUtil.buildPage(pageQuery, clazz);
-        QueryWrapper<E> query = QueryUtil.createQuery(clazz, pageQuery);
+        IPage<E> pageCondition = QueryUtil.buildPage(pageQuery);
+        QueryWrapper<E> query = QueryUtil.createQuery(entityClass, pageQuery);
 
         if (queryCustomizer != null) {
             queryCustomizer.accept(query);
         }
 
         // 重写查询的select部分
-        if (selectClass != null && selectClass != clazz) {
-            query = QueryUtil.rewriteSelect(query, selectClass);
+        if (resultClass != null && resultClass != entityClass) {
+            query = QueryUtil.rewriteSelect(query, resultClass);
         }
 
         pageCondition = mapper.selectPage(pageCondition, query);
@@ -76,11 +85,11 @@ public class PageQueryBuilder<E, R> {
         List<R> projectedRecords = pageCondition.getRecords().stream()
                 .map(f -> {
 
-                    if (clazz == null || selectClass == null) {
-                        throw new IllegalArgumentException("clazz or selectClass is invalid");
+                    if (entityClass == null || resultClass == null) {
+                        throw new IllegalArgumentException("entityClass or resultClass is invalid");
                     }
 
-                    if (selectClass == clazz) {
+                    if (resultClass == entityClass) {
                         return (R) f;
                     }
 
@@ -88,8 +97,8 @@ public class PageQueryBuilder<E, R> {
                         return converter.apply(f);
                     }
 
-                    throw new BizException("can not cast {} to {}", clazz.getSimpleName(), selectClass.getSimpleName());
-                }).collect(Collectors.toList());
+                    throw new BizException("can not cast {} to {}", entityClass.getSimpleName(), resultClass.getSimpleName());
+                }).toList();
 
         return new PagedData<>(projectedRecords, pageCondition.getTotal(), pageCondition.getCurrent());
     }
